--- a/index7.html
+++ b/index7.html
@@ -298,6 +298,9 @@
                     activeMobileTopic = topic; // remember clicked main topic
                     activeMobileSubtopic = null; // reset subtopic
 
+                    // Update breadcrumb immediately
+                    document.getElementById("breadcrumb").textContent = `Help Center > ${topic}`;
+
                     // Update active class for main topics
                     document.querySelectorAll(".main-topic-btn").forEach(btn => btn.classList.remove("active"));
                     topicBtn.classList.add("active");
