Search results answer preview now 1 line with  ellipsis

--- a/index7.html
+++ b/index7.html
@@ -405,7 +405,7 @@
                 const div = document.createElement('div');
                 div.className = 'search-item';
 
-                // create snippet preview
+                //  preview 
                 const matchIndex = r.plainAnswer.toLowerCase().indexOf(query.toLowerCase());
                 let snippet = r.plainAnswer;
                 if (matchIndex > -1) {
