--- a/index7.html
+++ b/index7.html
@@ -36,6 +36,57 @@
 
         <div class="breadcrumb" id="breadcrumb">Help Center</div>
 
+
+        <div id="help-landing">
+            <!-- <h2>Welcome to the Help Center</h2> -->
+            <div>
+                <h2>Product Inquiry</h2>
+                <ul data-topic="Product Inquiry">
+                    <li>
+                        <button class="landing-topic" data-subtopic="Warranty and Repairs">
+                            Warranty and Repairs
+                        </button>
+                    </li>
+                    <li>
+                        <button class="landing-topic" data-subtopic="Product Details">
+                            Product Details
+                        </button>
+                    </li>
+                    <li>
+                        <button class="landing-topic" data-subtopic="Test">
+                            Test
+                        </button>
+                    </li>
+                    <li>
+                        <button class="landing-topic" data-subtopic="Benz Pogi">
+                            Benz Pogi
+                        </button>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Payment & Promos</h2>
+                <ul data-topic="Payment & Promos">
+                    <li>
+                        <button class="landing-topic" data-subtopic="General">
+                            General
+                        </button>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Benz Test</h2>
+                <ul data-topic="Benz Test">
+                    <li>
+                        <button class="landing-topic" data-subtopic="Testst">
+                            Testst
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
         <div class="help-layout">
             <div id="sidebar" class="sidebar"></div>
 
@@ -127,6 +178,13 @@
                     subBtn.addEventListener('click', () => {
                         [...sidebar.querySelectorAll('.subtopic-btn')].forEach(b => b.classList.remove('active'));
                         subBtn.classList.add('active');
+
+                        // Update breadcrumb on desktop
+                        const breadcrumb = document.getElementById('breadcrumb');
+                        // breadcrumb.textContent = `Help Center > ${topic}`;
+                        // breadcrumb.innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a> > ${topic}${subtopic ? ' > ' + subtopic : ''}`;
+                        breadcrumb.innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a> > ${topic}`;
+
                         renderQuestions(subtopic, helpData[topic][subtopic]);
                     });
 
@@ -162,7 +220,10 @@
                     activeMobileSubtopic = null; // reset subtopic
 
                     // Update breadcrumb immediately
-                    document.getElementById("breadcrumb").textContent = `Help Center > ${topic}`;
+                    // document.getElementById("breadcrumb").textContent = `Help Center > ${topic}`;
+                    // document.getElementById("breadcrumb").innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a> > ${topic}`;
+                    updateBreadcrumb([topic]);
+
 
                     // Update active class for main topics
                     document.querySelectorAll(".main-topic-btn").forEach(btn => btn.classList.remove("active"));
@@ -237,7 +298,8 @@
             mobileSubtopics.innerHTML = "";
 
             // Update breadcrumb
-            document.getElementById("breadcrumb").textContent = `Help Center > ${topic}`;
+            // document.getElementById("breadcrumb").textContent = `Help Center > ${topic}`;
+            document.getElementById("breadcrumb").innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a> > ${topic}`;
 
             // Highlight active main topic
             document.querySelectorAll(".main-topic-btn").forEach(btn => {
@@ -296,7 +358,10 @@
 
             // Breadcrumb
             const breadcrumb = document.getElementById("breadcrumb");
-            breadcrumb.textContent = `Help Center > ${topic} > ${subtopic}`;
+            // breadcrumb.textContent = `Help Center > ${topic} > ${subtopic}`;
+            // breadcrumb.innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a> > ${topic} > ${subtopic}`;
+            breadcrumb.innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a> > ${topic}${subtopic ? ' > ' + subtopic : ''}`;
+
 
             // Back button
             const backBtn = document.createElement("button");
@@ -315,7 +380,8 @@
                 }
 
                 // Update breadcrumb
-                document.getElementById("breadcrumb").textContent = `Help Center > ${activeMobileTopic}`;
+                // document.getElementById("breadcrumb").textContent = `Help Center > ${activeMobileTopic}`;
+                updateBreadcrumb([activeMobileTopic]);
             });
 
             // Question title & answer
@@ -329,6 +395,9 @@
             mobileSubtopics.appendChild(backBtn);
             mobileSubtopics.appendChild(qTitle);
             mobileSubtopics.appendChild(ansDiv);
+
+            // window.location.hash = makeId(question.question);
+
         }
 
         function renderQuestions(subtopic, questions) {
@@ -363,7 +432,12 @@
                         ansDiv.classList.add('open');
                         qBtn.classList.add('active');
                         container.classList.add('active');
+
+                        // // Update breadcrumb for desktop
+                        // const breadcrumb = document.getElementById('breadcrumb');
+                        // breadcrumb.textContent = `Help Center > ${subtopic}`;
                     }
+                    // window.location.hash = makeId(q.question);
                 });
 
                 container.appendChild(qBtn);
@@ -417,11 +491,15 @@
                 div.innerHTML = `
     <strong>${highlightMatch(r.item.question, query)}</strong><br>
     <small>${highlightMatch(r.topic, query)} → ${highlightMatch(r.subtopic, query)}</small><br>
-`;
+    `;
                 // <span class="preview">${highlightMatch(snippet, query)}</span>
 
 
                 div.addEventListener('click', () => {
+                    document.getElementById('help-landing').style.display = 'none';
+                    document.querySelector('.help-layout').style.display = 'flex';
+
+
                     if (window.innerWidth <= MOBILE_BREAKPOINT) {
                         // Ensure mobile sidebar is rendered
                         if (!document.querySelectorAll(".main-topic-btn").length) {
@@ -488,6 +566,11 @@
         function openQuestionFromHash() {
             const hash = decodeURIComponent(window.location.hash.slice(1)); // remove '#'
             if (!hash) return;
+
+            // Show help layout and hide landing
+            document.getElementById('help-landing').style.display = 'none';
+            document.querySelector('.help-layout').style.display = 'flex';
+
 
             // First, find which subtopic contains this question
             for (let topic in helpData) {
@@ -571,6 +654,202 @@
         window.addEventListener('hashchange', openQuestionFromHash);
         window.addEventListener("resize", init);
 
+        document.querySelectorAll('.landing-topic').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const ul = btn.closest('ul');
+                const topic = ul.dataset.topic;
+                const subtopic = btn.dataset.subtopic;
+
+                // Set hash like #Product-Inquiry/Benz-Pogi
+                window.location.hash = `${encodeURIComponent(topic)}/${encodeURIComponent(subtopic)}`;
+
+                // Show help layout
+                document.getElementById('help-landing').style.display = 'none';
+                document.querySelector('.help-layout').style.display = 'flex';
+
+
+                // RESET MOBILE STATES
+                activeMobileTopic = null;
+                activeMobileSubtopic = null;
+                document.querySelectorAll('#mobile-topics .main-topic-btn').forEach(b => b.classList.remove('active'));
+                document.querySelectorAll('#mobile-subtopics .subtopic-btn').forEach(b => b.classList.remove('active'));
+                document.querySelectorAll('#mobile-subtopics .questions').forEach(q => q.classList.remove('open'));
+
+
+                if (window.innerWidth <= 768) {
+                    // MOBILE: reset all active states
+                    resetMobileDOM();
+
+                    // Set active topic/subtopic
+                    activeMobileTopic = topic;
+                    activeMobileSubtopic = subtopic;
+
+                    // Highlight clicked main topic
+                    const mainBtn = [...document.querySelectorAll(".main-topic-btn")].find(b => b.textContent === topic);
+                    if (mainBtn) mainBtn.classList.add("active");
+
+                    // Render only the subtopics of the active main topic
+                    renderMobileSubtopics(topic);
+
+                    // Highlight and open the clicked subtopic
+                    const subBtn = [...document.querySelectorAll(".subtopic-btn")].find(b => b.textContent === subtopic);
+                    if (subBtn) {
+                        subBtn.classList.add("active");
+                        const qContainer = subBtn.nextElementSibling;
+                        if (qContainer) qContainer.classList.add("open");
+                    }
+                } else {
+                    // DESKTOP: reset previous active/open states
+                    document.querySelectorAll('.topic-btn').forEach(btn => btn.nextElementSibling.classList.remove('open'));
+                    document.querySelectorAll('.subtopic-btn').forEach(btn => btn.classList.remove('active'));
+
+                    // DESKTOP: expand topic dropdown and show questions
+                    const topicBtn = [...document.querySelectorAll('.topic-btn')]
+                        .find(b => b.textContent.includes(topic));
+                    if (topicBtn) {
+                        const subtopicDiv = topicBtn.nextElementSibling;
+                        if (subtopicDiv) subtopicDiv.classList.add('open'); // open main topic dropdown
+
+                        const subBtn = [...subtopicDiv.querySelectorAll('.subtopic-btn')]
+                            .find(b => b.textContent === subtopic);
+                        if (subBtn) {
+                            subBtn.classList.add('active');
+                            renderQuestions(subtopic, helpData[topic][subtopic]); // render questions for desktop
+                        }
+                    }
+                }
+
+
+                // Update breadcrumb
+                updateBreadcrumb([topic, subtopic]);
+            });
+        });
+
+
+        // document.querySelectorAll('.landing-topic').forEach(btn => {
+        //     btn.addEventListener('click', () => {
+        //         const ul = btn.closest('ul');
+        //         const topic = ul.dataset.topic;
+        //         const subtopic = btn.dataset.subtopic;
+
+        //         // Set hash like #Product-Inquiry/Benz-Pogi
+        //         window.location.hash = `${encodeURIComponent(topic)}/${encodeURIComponent(subtopic)}`;
+
+        //         // Show help layout
+        //         document.getElementById('help-landing').style.display = 'none';
+        //         document.querySelector('.help-layout').style.display = 'flex';
+
+
+        //         // RESET MOBILE STATES
+        //         activeMobileTopic = null;
+        //         activeMobileSubtopic = null;
+        //         document.querySelectorAll('#mobile-topics .main-topic-btn').forEach(b => b.classList.remove('active'));
+        //         document.querySelectorAll('#mobile-subtopics .subtopic-btn').forEach(b => b.classList.remove('active'));
+        //         document.querySelectorAll('#mobile-subtopics .questions').forEach(q => q.classList.remove('open'));
+
+
+        //         if (window.innerWidth <= 768) {
+        //             // MOBILE: reset all active states
+        //             resetMobileDOM();
+
+        //             // MOBILE: render sidebar and open the subtopic dropdown
+        //             renderMobileSidebar();
+        //             activeMobileTopic = topic;
+        //             activeMobileSubtopic = subtopic;
+
+        //             const subBtn = [...document.querySelectorAll('#mobile-subtopics .subtopic-btn')]
+        //                 .find(b => b.textContent === subtopic);
+        //             if (subBtn) {
+        //                 subBtn.classList.add('active');
+        //                 const qContainer = subBtn.nextElementSibling;
+        //                 if (qContainer) qContainer.classList.add('open'); // only open subtopic dropdown
+        //             }
+        //         } else {
+        //             // DESKTOP: reset previous active/open states
+        //             document.querySelectorAll('.topic-btn').forEach(btn => btn.nextElementSibling.classList.remove('open'));
+        //             document.querySelectorAll('.subtopic-btn').forEach(btn => btn.classList.remove('active'));
+
+        //             // DESKTOP: expand topic dropdown and show questions
+        //             const topicBtn = [...document.querySelectorAll('.topic-btn')]
+        //                 .find(b => b.textContent.includes(topic));
+        //             if (topicBtn) {
+        //                 const subtopicDiv = topicBtn.nextElementSibling;
+        //                 if (subtopicDiv) subtopicDiv.classList.add('open'); // open main topic dropdown
+
+        //                 const subBtn = [...subtopicDiv.querySelectorAll('.subtopic-btn')]
+        //                     .find(b => b.textContent === subtopic);
+        //                 if (subBtn) {
+        //                     subBtn.classList.add('active');
+        //                     renderQuestions(subtopic, helpData[topic][subtopic]); // render questions for desktop
+        //                 }
+        //             }
+        //         }
+
+        //         // Update breadcrumb
+        //         updateBreadcrumb([topic, subtopic]);
+        //     });
+        // });
+
+
+        document.addEventListener('click', (e) => {
+            if (e.target && e.target.id === 'breadcrumb-home') {
+                e.preventDefault();
+                // Show landing page
+                document.getElementById('help-landing').style.display = 'block';
+                document.querySelector('.help-layout').style.display = 'none';
+
+                // Reset breadcrumb to just "Help Center"
+                document.getElementById('breadcrumb').textContent = 'Help Center';
+
+                // Optionally, reset mobile and desktop layouts
+                init();
+                window.location.hash = '';
+                updateBreadcrumb([]);
+
+            }
+        });
+
+        function resetMobileDOM() {
+            // Remove active from main topics
+            document.querySelectorAll('.main-topic-btn').forEach(btn => btn.classList.remove('active'));
+            // Remove active from all subtopics
+            document.querySelectorAll('.subtopic-btn').forEach(btn => btn.classList.remove('active'));
+            // Close all question containers
+            document.querySelectorAll('.questions').forEach(q => q.classList.remove('open'));
+        }
+
+
+        function updateBreadcrumb(path) {
+            const breadcrumb = document.getElementById('breadcrumb');
+
+            if (!path || path.length === 0) {
+                // Home / landing page
+                breadcrumb.innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a>`;
+            } else if (path.length === 1) {
+                // Topic level
+                breadcrumb.innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a> > ${path[0]}`;
+            } else if (path.length === 2) {
+                // Subtopic level
+                breadcrumb.innerHTML = `<a href="#" id="breadcrumb-home">Help Center</a> > ${path[0]} > ${path[1]}`;
+            }
+        }
+
+        function handleHash() {
+            const hash = decodeURIComponent(window.location.hash.slice(1));
+            const landing = document.getElementById('help-landing');
+            const layout = document.querySelector('.help-layout');
+
+            if (!hash || hash === 'home') {
+                landing.style.display = 'block';
+                layout.style.display = 'none';
+                document.getElementById('breadcrumb').textContent = 'Help Center';
+            } else {
+                openQuestionFromHash();
+            }
+        }
+
+        window.addEventListener('DOMContentLoaded', handleHash);
+        window.addEventListener('hashchange', handleHash);
     </script>
 </body>
 
